# ecommerce-azure-data-pipeline

./: .env.example  .gitignore  LICENSE  LINKEDIN_POST.md  Makefile  PUSH_TO_GITHUB.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: pipeline_config.yaml
data/landing/: .gitkeep
docs/: architecture.md
infra/bicep/: main.bicep
infra/terraform/: main.tf
notebooks/: 01_bronze_to_silver.py  03_silver_to_gold.py
orchestration/adf/: pipeline_ecommerce_medallion.json
src/ecommerce_pipeline/: __init__.py  analyze.py  config.py  pipeline.py
src/ecommerce_pipeline/ingestion/: bronze.py  generate_data.py
src/ecommerce_pipeline/quality/: checks.py
src/ecommerce_pipeline/transform/: gold.py  serve.py  silver.py
src/ecommerce_pipeline/utils/: logging_utils.py  spark_session.py
tests/: conftest.py  test_quality.py  test_silver.py
