[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ecommerce-azure-data-pipeline"
version = "1.0.0"
description = "End-to-end e-commerce data engineering pipeline (medallion architecture) — runnable locally, deployable to Azure."
requires-python = ">=3.9"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
